added nav section

--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -221,12 +221,32 @@ footer textarea {
     .skills-container,
     .resume-container,
     footer,
-    .about-items {
+    .about-items, .banner,
+    nav,
+    nav > ul {
         flex-direction: column;
+    }
+
+    nav > ul{
+        gap: 20px;
+    }
+
+    .btn-primary{
+        margin-bottom: 20px;
     }
 
     footer, .about {
         padding: 20px;
+    }
+
+    .banner{
+        margin: 20px ;
+    }
+    .banner-profile-pic{
+        width: 100%;
+    }
+    .header{
+        background-image: none;
     }
 
     .footer-column {
