added to all query

--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -212,10 +212,6 @@ footer textarea {
 
 /* Responsive media Query */
 
-.hide {
-    display: none;
-}
-
 @media screen and (max-width:576px) {
 
     .skills-container,
@@ -259,4 +255,12 @@ footer textarea {
         width: calc(100% - 40px);
     }
 
+}
+
+/* Tabet Specific Media Query  */
+
+@media screen and (min-width: 576px) and (max-width: 990px) {
+    .banner{
+        flex-direction: column;
+    } 
 }
